Update 102.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
@@ -495,3 +495,284 @@ repo id                    repo name                                      status
 
 
 ## Zypper
+
+`zypper` - это инструмент управления пакетами, используемый в SUSE Linux и OpenSUSE. По функциям он похож на `apt` и `yum`, имея возможность устанавливать, обновлять и удалять пакеты из системы с автоматическим разрешением зависимостей.
+
+
+### Обновление индекса пакета
+
+Как и другие инструменты управления пакетами, `zypper` работает с репозиториями, содержащими пакеты и метаданные. Эти метаданные необходимо время от времени обновлять, чтобы утилита знала о последних доступных пакетах. Чтобы выполнить обновление, просто введите:
+
+```console
+# zypper refresh
+Repository 'Non-OSS Repository' is up to date.
+Repository 'Main Repository' is up to date.
+Repository 'Main Update Repository' is up to date.
+Repository 'Update Repository (Non-Oss)' is up to date.
+All repositories have been refreshed.
+```
+
+`zypper` имеет функцию автоматического обновления, которую можно включить для каждого репозитория. Это означает, что некоторые репозитории могут обновляться автоматически перед запросом или установкой пакета, а другие, возможно, потребуется обновить вручную. Вскоре вы узнаете, как управлять этой функцией.
+
+
+### Поиск пакетов
+
+Для поиска пакета используйте оператор `search` (или `se`), за которым следует имя пакета:
+
+```console
+# zypper se gnumeric
+Loading repository data...
+Reading installed packages...
+
+S | Name           | Summary                           | Type
+--+----------------+-----------------------------------+--------
+  | gnumeric       | Spreadsheet Application           | package
+  | gnumeric-devel | Spreadsheet Application           | package
+  | gnumeric-doc   | Documentation files for Gnumeric  | package
+  | gnumeric-lang  | Translations for package gnumeric | package
+```
+
+Оператор поиска также может использоваться для получения списка всех установленных в системе пакетов. Для этого используйте параметр `-i` без имени пакета, как в `zypper se -i`. 
+
+Чтобы узнать, установлен ли конкретный пакет, добавьте имя пакета в приведенную выше команду. Например, следующая команда будет искать среди установленных пакетов любые, содержащие «firefox» в имени:
+
+```console
+# zypper se -i firefox
+Loading repository data...
+Reading installed packages...
+
+S | Name                               | Summary                 | Type
+--+------------------------------------+-------------------------+--------
+i | MozillaFirefox                     | Mozilla Firefox Web B-> | package
+i | MozillaFirefox-branding-openSUSE   | openSUSE branding of -> | package
+i | MozillaFirefox-translations-common | Common translations f-> | package
+```
+
+Чтобы искать только среди *неустановленных* пакетов, добавьте параметр `-u` к оператору `se`.
+
+
+### Установка, обновление и удаление пакетов
+
+Чтобы установить пакет программного обеспечения, используйте оператор `install` (или `in`), за которым следует имя пакета. Вот так:
+
+```console
+# zypper in unrar
+zypper in unrar
+Loading repository data...
+Reading installed packages...
+Resolving package dependencies...
+
+The following NEW package is going to be installed:
+  unrar
+
+1 new package to install.
+Overall download size: 141.2 KiB. Already cached: 0 B. After the operation, additional 301.6 KiB will be used.
+Continue? [y/n/v/...? shows all options] (y): y
+Retrieving package unrar-5.7.5-lp151.1.1.x86_64
+                                     (1/1), 141.2 KiB (301.6 KiB unpacked)
+Retrieving: unrar-5.7.5-lp151.1.1.x86_64.rpm .......................[done]
+Checking for file conflicts: .......................................[done]
+(1/1) Installing: unrar-5.7.5-lp151.1.1.x86_64 .....................[done]
+```
+
+`zypper` также можно использовать для установки пакета RPM на диск, пытаясь удовлетворить его зависимости с помощью пакетов из репозиториев. Для этого просто укажите полный путь к пакету вместо имени пакета, например, `zypper` в `/home/john/newpackage.rpm`. 
+
+Для обновления пакетов, установленных в системе, используйте `zypper update`. Как и в процессе установки, перед тем, как спросить, хотите ли вы продолжить, отобразится список пакетов, которые необходимо установить `/` обновить. 
+
+Если вы хотите вывести только список доступных обновлений, ничего не устанавливая, вы можете использовать `zypper list-updates`. 
+
+Чтобы удалить пакет, используйте оператор `remove` (или `rm`), за которым следует имя пакета:
+
+```console
+# zypper rm unrar
+Loading repository data...
+Reading installed packages...
+Resolving package dependencies...
+
+The following package is going to be REMOVED:
+  unrar
+
+1 package to remove.
+After the operation, 301.6 KiB will be freed.
+Continue? [y/n/v/...? shows all options] (y): y
+(1/1) Removing unrar-5.7.5-lp151.1.1.x86_64 ........................[done]
+```
+
+Имейте в виду, что при удалении пакета также удаляются все другие пакеты, зависящие от него. Например:
+
+```console
+# zypper rm libgimp-2_0-0
+Loading repository data...
+Warning: No repositories defined. Operating only with the installed resolvables. Nothing can be installed.
+Reading installed packages...
+Resolving package dependencies...
+
+The following 6 packages are going to be REMOVED:
+  gimp gimp-help gimp-lang gimp-plugins-python libgimp-2_0-0
+  libgimpui-2_0-0
+
+6 packages to remove.
+After the operation, 98.0 MiB will be freed.
+Continue? [y/n/v/...? shows all options] (y):
+```
+
+
+### Поиск пакетов, содержащих определенный файл
+
+Чтобы узнать, какие пакеты содержат конкретный файл, используйте оператор поиска, за которым следует параметр `--provides` и имя файла (или полный путь к нему). Например, если вы хотите узнать, какие пакеты содержат файл `libgimpmodule-2.0.so.0` в `/usr/lib64/`, вы должны использовать:
+
+```console
+# zypper se --provides /usr/lib64/libgimpmodule-2.0.so.0
+Loading repository data...
+Reading installed packages...
+
+S | Name          | Summary                                      | Type
+--+---------------+----------------------------------------------+--------
+i | libgimp-2_0-0 | The GNU Image Manipulation Program - Libra-> | package
+```
+
+
+### Получение информации о пакете
+
+Чтобы просмотреть метаданные, связанные с пакетом, используйте оператор `info`, за которым следует имя пакета. Это предоставит вам исходный репозиторий, имя пакета, версию, архитектуру, поставщика, установленный размер, если он установлен или нет, статус (если он актуален), исходный пакет и описание.
+
+```console
+# zypper info gimp
+Loading repository data...
+Reading installed packages...
+
+Information for package gimp:
+ -----------------------------
+Repository     : Main Repository
+Name           : gimp
+Version        : 2.8.22-lp151.4.6
+Arch           : x86_64
+Vendor         : openSUSE
+Installed Size : 29.1 MiB
+Installed      : Yes (automatically)
+Status         : up-to-date
+Source package : gimp-2.8.22-lp151.4.6.src
+Summary        : The GNU Image Manipulation Program
+Description    :
+    The GIMP is an image composition and editing program, which can be
+    used for creating logos and other graphics for Web pages. The GIMP
+    offers many tools and filters, and provides a large image
+    manipulation toolbox, including channel operations and layers,
+    effects, subpixel imaging and antialiasing, and conversions, together
+    with multilevel undo. The GIMP offers a scripting facility, but many
+    of the included scripts rely on fonts that we cannot distribute.
+```
+
+
+### Управление репозиториями программного обеспечения
+
+`zypper` также можно использовать для управления репозиториями программного обеспечения. Чтобы увидеть список всех репозиториев, зарегистрированных в настоящее время в вашей системе, используйте `zypper repos`:
+
+```console
+# zypper repos
+Repository priorities are without effect. All enabled repositories share the same priority.
+
+#  | Alias                     | Name                               | Enabled | GPG Check | Refresh
+---+---------------------------+------------------------------------+---------+-----------+--------
+ 1 | openSUSE-Leap-15.1-1      | openSUSE-Leap-15.1-1               | No      | ----      | ----
+ 2 | repo-debug                | Debug Repository                   | No      | ----      | ----
+ 3 | repo-debug-non-oss        | Debug Repository (Non-OSS)         | No      | ----      | ----
+ 4 | repo-debug-update         | Update Repository (Debug)          | No      | ----      | ----
+ 5 | repo-debug-update-non-oss | Update Repository (Debug, Non-OSS) | No      | ----      | ----
+ 6 | repo-non-oss              | Non-OSS Repository                 | Yes     | (r ) Yes  | Yes
+ 7 | repo-oss                  | Main Repository                    | Yes     | (r ) Yes  | Yes
+ 8 | repo-source               | Source Repository                  | No      | ----      | ----
+ 9 | repo-source-non-oss       | Source Repository (Non-OSS)        | No      | ----      | ----
+10 | repo-update               | Main Update Repository             | Yes     | (r ) Yes  | Yes
+11 | repo-update-non-oss       | Update Repository (Non-Oss)        | Yes     | (r ) Yes  | Yes
+```
+
+См. В столбце `Enabled`, что одни репозитории включены, а другие - нет. Вы можете изменить это с помощью оператора `modifyrepo`, за которым следует параметр `-e` (включить) или `-d` (отключить) и псевдоним репозитория (второй столбец в выходных данных выше).
+
+```console
+# zypper modifyrepo -d repo-non-oss
+Repository 'repo-non-oss' has been successfully disabled.
+
+# zypper modifyrepo -e repo-non-oss
+Repository 'repo-non-oss' has been successfully enabled.
+```
+
+Ранее мы упоминали, что `zypper` имеет возможность *автоматического обновления*, которую можно включить для каждого репозитория. Когда этот флаг включен, этот флаг заставляет `zypper` запускать операцию обновления (так же, как запуск `zypper refresh`) перед работой с указанным `repo`. Этим можно управлять с помощью параметров `-f` и `-F` оператора `modifyrepo`:
+
+```console
+# zypper modifyrepo -F repo-non-oss
+Autorefresh has been disabled for repository 'repo-non-oss'.
+
+# zypper modifyrepo -f repo-non-oss
+Autorefresh has been enabled for repository 'repo-non-oss'.
+```
+
+
+#### Добавление и удаление репозиториев
+
+Чтобы добавить новый репозиторий программного обеспечения для `zypper`, используйте оператор `addrepo`, за которым следует URL-адрес репозитория и имя репозитория, как показано ниже:
+
+```console
+# zypper addrepo http://packman.inode.at/suse/openSUSE_Leap_15.1/ packman
+Adding repository 'packman' ........................................[done]
+Repository 'packman' successfully added
+
+URI         : http://packman.inode.at/suse/openSUSE_Leap_15.1/
+Enabled     : Yes
+GPG Check   : Yes
+Autorefresh : No
+Priority    : 99 (default priority)
+
+Repository priorities are without effect. All enabled repositories share the same priority.
+```
+
+При добавлении репозитория вы можете включить автообновление с параметром `-f`. Добавленные репозитории включены по умолчанию, но вы можете добавлять и отключать репозиторий одновременно с помощью параметра `-d`. 
+
+Чтобы удалить репозиторий, используйте оператор `removerepo`, за которым следует имя репозитория (псевдоним). Чтобы удалить репозиторий, добавленный в приведенном выше примере, используйте следующую команду:
+
+```console
+# zypper removerepo packman
+Removing repository 'packman' ......................................[done]
+Repository 'packman' has been removed.
+```
+
+
+## Упражнения для закрепления
+
+1. Разделите следующие имена общедоступных библиотек на части:
+
+| **Полное имя файла**   | **Название библиотеки** | ***so* суффикс** | **Номер версии** |
+|:-----------------------|:------------------------|:-----------------|:-----------------|
+| `linux-vdso.so.1`      |                         |                  |                  |  
+| `libprocps.so.6`       |                         |                  |                  |
+| `libdl.so.2`           |                         |                  |                  |  
+| `libc.so.6`            |                         |                  |                  |
+| `libsystemd.so.0`      |                         |                  |                  |  
+| `ld-linux-x86-64.so.2` |                         |                  |                  |
+
+2. Вы разработали часть программного обеспечения и хотите добавить в свою систему новый каталог общедоступной библиотеки (`/opt/lib/mylib`). Вы указываете его абсолютный путь в файле `mylib.conf`. 
+* В какой каталог вы должны поместить этот файл? 
+* Какую команду следует запустить, чтобы изменения полностью вступили в силу?
+
+3. Какую команду вы бы использовали для вывода списка общедоступных библиотек, необходимых для `kill`?
+
+
+## Упражнения на размышление
+
+
+
+
+## Резюме
+
+
+
+
+## Ответы на упражнения для закрепления
+
+
+
+
+
+## Ответы на упражнения для размышления
+
+
