Update 102.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
@@ -739,32 +739,47 @@ Repository 'packman' has been removed.
 
 ## Упражнения для закрепления
 
-1. Разделите следующие имена общедоступных библиотек на части:
+1. Используя `rpm` в системе Red Hat Enterprise Linux, как бы вы установили пакет `file-Roller-3.28.1-2.el7.x86_64.rpm`, показывающий индикатор выполнения во время установки? 
 
-| **Полное имя файла**   | **Название библиотеки** | ***so* суффикс** | **Номер версии** |
-|:-----------------------|:------------------------|:-----------------|:-----------------|
-| `linux-vdso.so.1`      |                         |                  |                  |  
-| `libprocps.so.6`       |                         |                  |                  |
-| `libdl.so.2`           |                         |                  |                  |  
-| `libc.so.6`            |                         |                  |                  |
-| `libsystemd.so.0`      |                         |                  |                  |  
-| `ld-linux-x86-64.so.2` |                         |                  |                  |
+2. Используя `rpm`, узнайте, какой пакет содержит файл `/etc/redhat-release`. 
 
-2. Вы разработали часть программного обеспечения и хотите добавить в свою систему новый каталог общедоступной библиотеки (`/opt/lib/mylib`). Вы указываете его абсолютный путь в файле `mylib.conf`. 
-* В какой каталог вы должны поместить этот файл? 
-* Какую команду следует запустить, чтобы изменения полностью вступили в силу?
+3. Как бы вы использовали `yum` для проверки обновлений для всех пакетов в системе? 
 
-3. Какую команду вы бы использовали для вывода списка общедоступных библиотек, необходимых для `kill`?
+4. Как с помощью `zypper` отключить репозиторий под названием `repo-extras`? 
+
+5. Если у вас есть файл `.repo`, описывающий новый репозиторий, куда этот файл следует поместить, чтобы он распознавался DNF?
 
 
 ## Упражнения на размышление
 
+1. Как бы вы использовали `zypper`, чтобы узнать, какой пакет владеет файлом `/usr/sbin/swapon`? 
 
+2. Как с помощью `dnf` получить список всех установленных в системе пакетов? 
+
+3. Используя `dnf`, какова команда для добавления репозитория, расположенного по адресу `https: //www.example.url/home:reponame.repo`, в систему? 
+
+4. Как вы можете использовать `zypper`, чтобы проверить, установлен ли распакованный пакет? 
+
+5. Используя `yum`, выясните, какой пакет предоставляет файл `/bin/wget`.
 
 
 ## Резюме
 
+На этом уроке вы узнали: 
 
+* Как использовать `rpm` для установки, обновления и удаления пакетов. 
+* Как использовать `yum`, `zypper` и `dnf`. 
+* Как получить информацию о пакете. 
+* Как получить список содержимого пакета. 
+* Как узнать, из какого пакета пришел файл. 
+* Как вносить в список, добавлять, удалять, включать или отключать программные репозитории. 
+
+Обсуждались следующие команды: 
+
+* `rpm`
+* `yum` 
+* `dnf` 
+* `zypper`
 
 
 ## Ответы на упражнения для закрепления
