Update 102.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
@@ -784,10 +784,35 @@ Repository 'packman' has been removed.
 
 ## Ответы на упражнения для закрепления
 
+**1. Используя `rpm` в системе Red Hat Enterprise Linux, как бы вы установили пакет `file-Roller-3.28.1-2.el7.x86_64.rpm`, показывающий индикатор выполнения во время установки?**  
+Используйте параметр `-i`, чтобы установить пакет, и параметр `-h`, чтобы включить «хэш-метки», показывающие ход установки. Итак, ответ: `rpm -ih file-Roller-3.28.1-2.el7.x86_64.rpm`.
 
+**2. Используя `rpm`, узнайте, какой пакет содержит файл `/etc/redhat-release`.**   
+Вы запрашиваете информацию о файле, поэтому используйте параметр `-qf`: `rpm -qf /etc/redhat-release`.
 
+**3. Как бы вы использовали `yum` для проверки обновлений для всех пакетов в системе?**  
+Используйте операцию проверки-обновления без имени пакета: `yum check-update`.
+
+**4. Как с помощью `zypper` отключить репозиторий под названием `repo-extras`?**  
+Используйте операцию `modifyrepo`, чтобы изменить параметры репо, и параметр `-d`, чтобы отключить его: `zypper modifyrepo -d repo-extras`.
+
+**5. Если у вас есть файл `.repo`, описывающий новый репозиторий, куда этот файл следует поместить, чтобы он распознавался DNF?**  
+Файлы `.repo` для DNF должны быть помещены в то же место, что и YUM, внутри `/etc/yum.repos.d/`.
 
 
 ## Ответы на упражнения для размышления
 
+**1. Как бы вы использовали `zypper`, чтобы узнать, какой пакет владеет файлом `/usr/sbin/swapon`?**
+Используйте оператор `se` (поиск) и параметр `--provides`: `zypper se --provides /usr/sbin/ swapon`.
 
+**2. Как с помощью `dnf` получить список всех установленных в системе пакетов?** 
+Используйте оператор списка, за которым следует параметр `--installed`: `dnf list --installed`.
+
+**3. Используя `dnf`, какова команда для добавления репозитория, расположенного по адресу `https: //www.example.url/home:reponame.repo`, в систему?** 
+Работа с репозиториями - это «изменение конфигурации», поэтому используйте `config-manager` и параметр `--add_repo`: `dnf config-manager --add_repo https: //www.example.url/home:reponame.repo`.
+
+**4. Как вы можете использовать `zypper`, чтобы проверить, установлен ли распакованный пакет?** 
+Вам необходимо выполнить поиск (поиск) в установленных (`-i`) пакетах: `zypper se -i unzip`.
+
+**5. Используя `yum`, выясните, какой пакет предоставляет файл `/bin/wget`.**
+Чтобы узнать, что предоставляет файл, используйте `whatprovides` и имя файла: `yum whatprovides /bin/wget`.
