Update 102.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
@@ -287,7 +287,7 @@ Installed size: 1.7 M
 Is this ok [y/d/N]:
 ```
 
-Чтобы обновить установленный пакет, используйте yum update `PACKAGENAME`, где `PACKAGENAME` - это имя пакета, который вы хотите обновить. Например:
+Чтобы обновить установленный пакет, используйте `yum update PACKAGENAME`, где `PACKAGENAME` - это имя пакета, который вы хотите обновить. Например:
 
 ```console
 # yum update wget
